--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Redistribution of Canadian statistical boundaries as TopoJSON",
   "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublishOnly": "bash prepublish"
   },
   "keywords": [
     "topojson",
@@ -15,5 +18,14 @@
     "shapefile"
   ],
   "author": "Thomas McManus",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "d3-dsv": "^3.0.1",
+    "d3-geo-projection": "^4.0.0",
+    "ndjson-cli": "^0.3.1",
+    "shapefile": "^0.6.6",
+    "topojson-client": "^3.1.0",
+    "topojson-server": "^3.0.1",
+    "topojson-simplify": "^3.0.3"
+  }
 }
